# CascadeProjects

.windsurf/rules/: python.md
asteroids/: .gitignore  README.md  pyproject.toml
asteroids/src/asteroids/: __init__.py  __main__.py  game.py
asteroids/src/asteroids.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
asteroids/tests/: __init__.py  test_game.py
