[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "asteroids"
version = "0.1.0"
description = "A simple asteroids game using Pygame"
requires-python = ">=3.8"
dependencies = [
    "pygame>=2.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
python_files = "test_*.py"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
]
